fixed navbar issue and squashed some bugs

--- a/client/src/styles/globalStyles.css
+++ b/client/src/styles/globalStyles.css
@@ -72,6 +72,7 @@
 }
 
 .heroDiv {
+  max-height: 700px;
   width: 100%;
   aspect-ratio: 1.62;
   padding: 8px;
